根据公司表结构重构用户模块及涉及到的部分